tests/files/invalid_blendfiles/invalid_global_block.blend
version https://git-lfs.github.com/spec/v1
oid sha256:020680dffa3a3b7fc63bb9b8449ea80606454e8f164acc8bc9d15da6045a01a1
size 81163
